--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -1,11 +1,12 @@
 $px: 1rem/20
 #header
-  background: #282828
   color: #999
   z-index: 500
   width: 100%
   height: 60*$px
   line-height: 60*$px
+  .header-wrapper
+    background: #282828
   a
     display: inline-block
   .go-menu,.go-mine
