--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -1,9 +1,20 @@
 $px: 1rem/20
 #home
-  background-color: #e1e1e1
-  .banner-swipe
-    color: #fff
-    font-size: 30*$px
-    text-align: center
-    overflow: hidden
-    .slide img
+  background-color: #fff
+  .now-playing
+    padding-top: 35*$px
+    width: 1200*$px
+    margin: 0 auto
+    .now-playing-header
+      border-bottom: 1px solid #ccc
+      span
+        font-size: 24px
+      p
+        float: right
+        display: inline-block
+        font-size: 14px
+        color: #b2b2b2
+        margin: 14*$px 0
+        a
+          color: #ff6640
+
