--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -3,7 +3,7 @@ $px: 1rem/20
   background-color: #fff
   .now-playing
     padding-top: 35*$px
-    width: 1200*$px
+    width: 1200px
     margin: 0 auto
     .now-playing-header
       border-bottom: 1px solid #ccc
@@ -18,5 +18,9 @@ $px: 1rem/20
         a
           color: #ff6640
     .now-playing-content
-      height: 330*$px
+      .now-playing-content-item
+        display: inline-block
+        img
+          width: 180*$px
+          height: 250*$px
 
