--- a/src/styles/home.sass
+++ b/src/styles/home.sass
@@ -64,4 +64,46 @@ $px: 1rem/20
         line-height: 36px
         a
           color: #808080
+    .comment
+      height: 410px
+      width: 878px
+      margin-top: 25px
+      display: inline-block
+      .comment-header
+        h1
+          border-bottom: 1px solid #cccccc
+          .comment-sync
+            float: right
+            font-size: 14px
+            text-align: center
+      .comment-content
+        overflow: hidden
+        height: 350px
+        .comment-item
+          border-bottom: 1px solid #cccccc
+          height: 113px
+          .comment-content-avatar
+            display: inline-block
+            height: 58px
+            width: 58px
+            border-radius: 50%
+            margin-top: 24px
+          .comment-content-detail
+            display: inline-block
+    .phone-ticket
+      display: inline-block
+      width: 284px
+      height: 410px
+      float: right
+      margin-top: 25px
+      h1
+        border-bottom: 1px solid #ccc
+      .phone-ticket-code
+        li
+          border-bottom: 1px solid #cccccc
+          .code-content
+            display: inline-block
+            margin-bottom: 20px
+
+
 
