--- a/src/styles/film.sass
+++ b/src/styles/film.sass
@@ -40,7 +40,16 @@
             ul
               margin-top: 28px
           button
-
+            width: 92px
+            height: 44px
+            margin-top: 100px
+            border-radius: 22px
+            background-color: #ff6640
+            display: inline-block
+            float: left
+            font-size: 12px
+            color: #ffffff
+            font-weight: bold
   .right-view
     float: right
     width: 280px
